--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,6 +1,9 @@
 development:
-  host: localhost
-  database: popos_development
+  host: <%= ENV["MONGOLAB_POPOS_HOST"] %>
+  port: <%= ENV["MONGOLAB_POPOS_PORT"] %>
+  database: <%= ENV["MONGOLAB_POPOS_DATABASE"] %>
+  username: <%= ENV["MONGOLAB_POPOS_USERNAME"] %>
+  password: <%= ENV["MONGOLAB_POPOS_PASSWORD"] %>
 
 test:
   host: localhost
