--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -9,15 +9,9 @@ test:
   host: localhost
   database: popos_test
 
-# set these environment variables on your prod server
 production:
-  host: <%= ENV['MONGOID_HOST'] %>
-  port: <%= ENV['MONGOID_PORT'] %>
-  username: <%= ENV['MONGOID_USERNAME'] %>
-  password: <%= ENV['MONGOID_PASSWORD'] %>
-  database: <%= ENV['MONGOID_DATABASE'] %>
-  # slaves:
-  #   - host: slave1.local
-  #     port: 27018
-  #   - host: slave2.local
-  #     port: 27019
+  host: <%= ENV["MONGOLAB_POPOS_HOST"] %>
+  port: <%= ENV["MONGOLAB_POPOS_PORT"] %>
+  database: <%= ENV["MONGOLAB_POPOS_DATABASE"] %>
+  username: <%= ENV["MONGOLAB_POPOS_USERNAME"] %>
+  password: <%= ENV["MONGOLAB_POPOS_PASSWORD"] %>
